GET and PUT image functionality

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!--Display Results-->
     <div id="photos-container">
-        photos will go here
+        this is where photos go
     </div>
 
     <!--Upload Photos Area-->
